fix for pagan's scrollbar issue

--- a/wp-content/plugins/irec-green-connect/public/css/quiz.css
+++ b/wp-content/plugins/irec-green-connect/public/css/quiz.css
@@ -133,7 +133,7 @@
 #modal.results {
   background-color: #16577b;
 }
-.active {
+.quiz-slide.active {
   padding: 20px;
   opacity: 1;
   height: auto;
